# TermiGenius

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/termigenius/: __init__.py  cli.py
src/termigenius/ai/: __init__.py  gemini.py  prompts.py
src/termigenius/core/: __init__.py  executor.py  history.py  validator.py
src/termigenius/data/: commands.json  safety_rules.json
src/termigenius/utils/: __init__.py  config.py  helpers.py  ui.py
